<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/home" >

    <fragment
        android:id="@+id/home"
        android:name="com.olehmesh.instacell.fragments.fragment_main.FragmentMain"
        android:label="@string/home" />
    <fragment
        android:id="@+id/search"
        android:name="com.olehmesh.instacell.fragments.fragment_search.FragmentSearch"
        android:label="@string/search" />
    <fragment
        android:id="@+id/add"
        android:name="com.olehmesh.instacell.fragments.fragment_add.FragmentAdd"
        android:label="@string/add" />
    <fragment
        android:id="@+id/favorites"
        android:name="com.olehmesh.instacell.fragments.fragment_favorites.FragmentFavorites"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/account"
        android:name="com.olehmesh.instacell.fragments.fragment_favorites.FragmentFavorites"
        android:label="@string/account" />

</navigation>
